# File-Sharing-App

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
Labrin/: asgi.py  celery.py  settings.py  (+2 more)
backend/: docker-compose.yml  pyproject.toml  requirements.txt  start-dev.sh
backend/file_sharing_app/: manage.py  requirements.txt  start-dev.sh
backend/file_sharing_app/comment/: consumers.py  routing.py  urls.py  views.py
backend/file_sharing_app/comment/static/: index.js  room.js
backend/file_sharing_app/file/: admin.py  middlewares.py  models.py  tasks.py  tests.py
backend/file_sharing_app/file/api/: serializers.py  urls.py  views.py
backend/file_sharing_app/file/migrations/: 0001_initial.py  0002_initial.py  0003_alter_file_user.py  0004_alter_fileaccess_options.py
backend/file_sharing_app/file_sharing_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/file_sharing_app/files/: openapireports.json
backend/file_sharing_app/templates/: 404page.html
backend/file_sharing_app/user/: admin.py  models.py  tests.py
backend/file_sharing_app/user/api/: serializers.py  urls.py  views.py
backend/file_sharing_app/user/migrations/: 0001_initial.py  0002_user_uuid.py  0003_alter_user_uuid_userinfo.py  0004_delete_userinfo.py  0005_userinfo.py  0006_remove_userinfo_user.py  0007_alter_userinfo_options_user_is_online.py
backend/files/: 2354b692-185a-448e-bea8-64a81b9367bf.xlsx  5cc86211-9a90-4254-a529-206e9a8f0353_XROPS4X.xlsx  61941fe1-3c6c-4913-a77c-2db4535e9d00.xlsx  e15a5b9f-eac4-488a-b0ab-dae048954f85.xlsx
(+54 files in other folders)
